syntax = "proto3";

message NumericTypes {
    uint32 uint32_value = 1;
    uint64 uint64_value = 2;
    int32 int32_value = 3;
    int64 int64_value = 4;
    sint32 sint32_value = 5;
    sint64 sint64_value = 6;
    fixed32 fixed32_value = 7;
    fixed64 fixed64_value = 8;
    sfixed32 sfixed32_value = 9;
    sfixed64 sfixed64_value = 10;
    double double_value = 11;
    float float_value = 12;
}

message RepeatedNumericTypes {
    repeated uint32 uint32_values = 1;
    repeated uint64 uint64_values = 2;
    repeated int32 int32_values = 3;
    repeated int64 int64_values = 4;
    repeated sint32 sint32_values = 5;
    repeated sint64 sint64_values = 6;
    repeated fixed32 fixed32_values = 7;
    repeated fixed64 fixed64_values = 8;
    repeated sfixed32 sfixed32_values = 9;
    repeated sfixed64 sfixed64_values = 10;
    repeated double double_values = 11;
    repeated float float_values = 12;
}
